--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -32,11 +32,8 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header{
     list-style-type: none;
-}
-
-.header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -63,17 +60,11 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
- 
+    max-height: 200px;
 }
 
 .benefits {
-    margin-right: 20px;
+    margin-right: 10px auto;
     padding: 20px;
     clear: both;
     float: right;
@@ -81,16 +72,10 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    margin-bottom: 32px;
     color: #ffffff;
-    text-align: center
-}
-
-.bene-pics {
     display: block;
-    margin: 10px auto;
     max-width: 150px;
-}
+  }
 
 .h3 {
     margin-bottom: 10px;
@@ -100,11 +85,14 @@ p {
 .box{
     float: right;
     margin-left: 25px;
+    max-height: 200px;
 }
 
 .box-two{
-    float: left;
+    float: right;
     margin-right: 25px;
+    box-sizing: border-box;
+    max-height: 200px;
 }
 
 .search-engine-optimization img {
